@@ -1,49 +1,42 @@
 package core.basesyntax;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import core.basesyntax.impl.FileWriterImpl;
-import core.basesyntax.service.FileWriter;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import static org.junit.jupiter.api.Assertions.*;
+import java.nio.file.Paths;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 class FileWriterImplTest {
-    private FileWriter fileWriter;
-    private Path tempFile;
+    private static final String TEST_FILE_TO_WRITE = "src/test/resources/test.csv";
+    private static FileWriter fileWriter;
 
-    @BeforeEach
-    void setUp() throws IOException {
+    @BeforeAll
+    static void beforeAll() {
         fileWriter = new FileWriterImpl();
-        tempFile = Files.createTempFile("testReport", ".txt");
     }
 
     @Test
-    void writeReport_ValidData_WritesSuccessfully() throws IOException {
-        String content = "fruit,quantity\nbanana,10\napple,20";
-        fileWriter.writeReport(content, tempFile.toString());
-
-        String result = Files.readString(tempFile);
-        assertEquals(content, result);
+    void write_validData_Ok() throws Exception {
+        fileWriter.write(TEST_FILE_TO_WRITE, "data");
+        String content = new String(Files.readAllBytes(Paths.get(TEST_FILE_TO_WRITE)));
+        assertEquals("data", content.trim());
     }
 
     @Test
-    void writeReport_EmptyData_WritesEmptyFile() throws IOException {
-        fileWriter.writeReport("", tempFile.toString());
-
-        String result = Files.readString(tempFile);
-        assertTrue(result.isEmpty());
+    void writerHandlesEmptyData_Ok() throws IOException {
+        fileWriter.write(TEST_FILE_TO_WRITE, "");
+        String content = new String(Files.readAllBytes(Paths.get(TEST_FILE_TO_WRITE)));
+        assertEquals("", content.trim());
     }
 
     @Test
-    void writeReport_InvalidPath_ThrowsRuntimeException() {
-        String invalidPath = "/invalid/path/report.txt";
-
-        Exception exception = assertThrows(RuntimeException.class, () ->
-                fileWriter.writeReport("test data", invalidPath)
-        );
-
-        assertTrue(exception.getMessage().contains("Failed to write report to file"));
+    void writer_NotNull_Ok() {
+        fileWriter.write(TEST_FILE_TO_WRITE,"data");
+        assertNotNull(fileWriter);
     }
 }
